# softwerkskammer-2021-02

./: .gitignore  README.md
cpp/: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  configure.sh  docker-compose.yml  mars_rover.cpp  mars_rover.h  mars_rover.test.cpp  mars_rover.test.support.cpp  mars_rover.test.support.h  readme.md
dotnet/: .gitignore  MarsRoverKata.sln  docker-compose.yml  readme.md
dotnet/MarsRoverKata/: MarsRover.Test.cs  MarsRover.cs  MarsRoverKata.csproj
java/: .project  mars-rover.md  pom.xml
java/src/main/java/rover/: Rover.java
java/src/test/java/rover/: RoverTest.java
java_environment/: .project  pom.xml
java_environment/src/main/java/java_environment/: App.java
java_environment/src/test/java/java_environment/: AppTest.java
java_environment/src/test/java/rover/: Rover.java
javascript/: .editorconfig  Dockerfile  file.test.js  mars-rover.md  package-lock.json  package.json  rover.js  rover.test.js
